2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	* src/model/options.h:
	* src/model/point.h:
	* src/qt4/ball_painter.cpp:
	* src/qt4/ball_painter_rcss.cpp:
	* src/qt4/ball_trace_painter.cpp:
	* src/qt4/debug_log_painter.cpp:
	* src/qt4/debug_painter.cpp:
	* src/qt4/field_canvas.cpp:
	* src/qt4/field_evaluation_painter.cpp:
	* src/qt4/field_painter.cpp:
	* src/qt4/offside_line_painter.cpp:
	* src/qt4/player_control_painter.cpp:
	* src/qt4/player_painter.cpp:
	* src/qt4/player_painter_rcss.cpp:
	* src/qt4/player_trace_painter.cpp:
	* src/qt4/score_board_painter.cpp:
	* src/qt4/voronoi_diagram_painter.cpp:
	- スクリーン座標値をすべて実数で扱うように変更

	* src/model/agent_id.h:
	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/evaluation_window.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/qt4/field_evaluation_painter.cpp:
	- AgentID::isNull()を追加し，値の妥当性チェックをこのメソッドで行うように変更

	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	- リスト表示をQListWidgetからQTreeWidgetへ変更し，IDと評価値を別カラムに表示

2013-05-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/main_data.cpp:
	* src/model/main_data.h:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/evaluator_control_panel.cpp:
	* src/qt4/evaluator_control_panel.h:
	- ActionSequenceSelector周りのコード整理
	- 不要になったChainDescriptionSetHolderの変数を削除

	* src/qt4/Makefile.am:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/action_sequence_selector.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	* src/qt4/evaluator_control_panel.cpp:
	* src/qt4/evaluator_control_panel.h:
	* src/qt4/chain_selector.cpp:
	* src/qt4/action_sequence_selector.cpp:
	* src/qt4/chain_selector.h:
	* src/qt4/action_sequence_selector.h:
	- 行動列探索のデバッガのコード整理途中．
	- ChainSelectorをActionSequenceSelectorへリネーム
